[project]
name = "mojofs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['mojofs']
exclude = []

[tool.setuptools.package-data]


[[tool.uv.index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mojofs = { path = ".", editable = true }

[tool.pixi.tasks]
